# arne.me

./: .eleventy.js  .eleventyignore  .gitignore  .prettierignore  .swcrc  404.html  404.md  Cargo.toml  README.md  _redirects  astro.config.mjs  astro.config.ts  config.toml  default.nix  feed.njk  feed.xml  feeds.njk  flake.nix  go.mod  index.html  index.njk  likes.njk  main.css  netlify.toml  next.config.js  package-lock.json  package.json  pre-build.py  pre_build.py  robots.txt  rust-toolchain.toml  shell.nix  site.webmanifest  sitemap.xml  stream.njk  styles.njk  tags.njk
.github/workflows/: automation.yaml  build.yml  ci.yaml  dependabot-auto-approve.yaml  links.yml  nix-build.yml  nix_build.yml  syndicate.yaml
_data/: currentYear.js  feeds.js  likes.js  metadata.json  metadata.yaml
_includes/: book.njk  default.njk  link.njk  photo.njk  post.njk
_includes/layouts/: base.njk  post.njk
_includes/types/: book.njk  link.njk  photo.njk  post.njk
about/: index.md
accessibility/: index.html
admin/: config.yml  index.html
app/: Footer.tsx  Header.tsx  SharedHead.tsx  head.tsx  layout.tsx  page.tsx
app/[page]/: page.tsx
app/[slug]/: page.tsx
app/blog/: head.tsx  page.tsx
app/weekly/: SubscribeForm.tsx  head.tsx  page.tsx
app/work/: head.tsx  page.tsx
assets/: TypeScript.sublime-syntax  viml.sublime-syntax
assets/scss/: _base.scss  _inter.scss  _reset.scss  _retail.scss  _vars.scss  main.scss
blog/: index.html
blog/30-bits-of-advice-for-30-years/: index.html
blog/announcing-the-automate-series/: index.html
blog/app-defaults/: index.html
blog/archive-your-old-projects/: index.html
blog/automate-1-spotify-podcast-mirror/: index.html
blog/automate-2-checklists-with-things/: index.html
blog/deploy-octopress-via-git/: index.html
blog/diy-music-streaming-with-nixos-and-jellyfin/: index.html
blog/emacs-config-from-scratch-part-three/: index.html
blog/emacs-from-scratch-part-one-foundations/: final.avif  index.html
blog/emacs-from-scratch-part-two/: index.html
blog/hello-world/: index.html
blog/home-screen-february-2024/: home-screen.avif
blog/home-screen-march-2024/: home-screen.avif
blog/i-lived-7-days-without-a-smartphone/: index.html
blog/i18n-in-node-js/: index.html
blog/im-writing-an-app/: index.html
blog/jj-in-practice/: index.html
blog/my-favorite-articles-of-2023/: index.html
blog/on-hexagonal-architecture/: index.html
blog/plex-on-nixos/: index.html
blog/static-og-images-in-astro/: index.html
blog/thoughts-on-zig/: index.html
blog/vim-projects/: index.html
blog/we-need-more-zero-config-tools/: index.html
blog/we-need-to-bring-back-webrings/: index.html
blog/write-your-own-ssg/: index.html
blog/writing-an-sdk-in-zig-part-1/: index.html
blog/yearly-themese-2024/: index.html
blog/youre-using-email-wrong/: index.html
blogroll/: index.html
books/: books.json  network-effect.md
colophon/: index.html
contact/: index.html
content/: _index.md  accessbility.md  blogroll.md  colophon.md  contact.md  experience.md  imprint.md  index.md  now.md  projects.md  subscribed.md  unsubscribed.md  work.md
content/articles/: 30-bits-of-advice-for-30-years.md  announcing-the-automate-series.md  app-defaults.md  (+44 more)
crates/arneos/: Cargo.toml
crates/arneos/src/: content.rs  fonts.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: automate.rs  export_weekly_feeds.rs  main.rs  syndicate.rs  watch.rs  webmentions.rs
crates/pichu/: Cargo.toml
crates/pichu/src/: lib.rs
crates/ssg/: Cargo.toml
crates/ssg/src/: automate.rs  blog.rs  index.rs  layout.rs  library.rs  main.rs  og.rs  page.rs  project.rs  rss.rs  sitemap.rs  timer.rs  watch.rs  webmentions.rs  weekly.rs
crates/ssg/src/templates/: blog.rs  home_screen.rs  index.rs  layout.rs  library.rs  mod.rs  page.rs  project.rs  weekly.rs
css/: dosis.css  main.css  prism-atom-dark.css  prism-material-light.css  prism-solarized-light.css  prism-solarized.css  prism.css  rubik.css
extra_highlight_themes/: base16-unikitty-light.tmTheme
fonts/: capriola.css
home-screens/: 2024-05.avif  index.html
imprint/: index.html
layouts/: index.html
lib/: fs.ts  issues.ts  markdown.ts  posts.ts  readingTime.ts
links/: a-look-at-imessage-in-ios-14.md  rust-cookbook.md  server-sent-events-a-simple-way-to-stream-events-from-a-server.md  the-iconic-watches-that-inspired-apple-watch-faces.md
now/: index.html
photos/: christmas-with-covid-19.md  photos.json
posts/: announcing-the-automate-series.md  automate-1-spotify-podcast-mirror.md  automate-2-checklists-with-things.md  hello-world.md  i18n-in-node-js.md  im-writing-an-app.md  on-hexagonal-architecture.md  posts.json
projects/: index.html
public/: _redirects
sass/: _base.scss  _fonts.scss  _index.scss  _pages.scss  _reset.scss  _syntax_theme_dark.scss  _syntax_theme_light.scss  _vars.scss  style.scss
scripts/: download-fonts.js  download-fonts.ts  embed_revision.py  export-weekly.ts  generate-rss.ts  weekly-issue-to-markdown.js  weekly-issue-to-markdown.ts
scss/: styles.scss
src/: automate.rs  consts.ts  content.rs  env.d.ts  export_weekly_feeds.rs  export_weekly_opml.rs  fonts.rs  index.rs  layout.rs  main.rs  og.rs  routes.rs  rss.rs  sitemap.rs  templates.rs  watch.rs  webmentions.rs
static/: .htaccess  _headers  _redirects  ai.txt  netlify.toml  robots.txt  site.webmanifest
styles/: _article.scss  _aside.scss  _base.css  _base.scss  _blog.scss  _book_reviews.scss  _fonts.scss  _footer.scss  _index.scss  _library.scss  _mixins.scss  _page.scss  _pages.css  _projects.scss  _reset.css  _reset.scss  _syntax.scss  _syntax_theme_dark.css  _syntax_theme_light.css  _vars.css  _vars.scss  _weekly.scss  base16-unikitty-dark.css  base16-unikitty-light.css  global.css  main.scss  reset.scss
subscribed/: index.html
syntax/: nix.sublime-syntax  syntax_set
templates/: 404.html  base.html  blog-page.html  blog.html  experience.html  index.html  layout.html  page.html  projects.html  weekly-page.html  weekly.html  work.html
unsubscribed/: index.html
weekly/: feed.xml  index.html
(+731 files in other folders)
