[package]
name = "arne-me"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
pichu = "0.4"
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "clock",
    "serde",
] }
clap = { version = "4", features = ["derive"] }
maud = { version = "0.27" }
quick-xml = { version = "0.38", features = ["serialize"] }
rss = "2"
serde = { version = "1", features = ["derive"] }
url = { version = "2.5", features = ["serde"] }
serde_json = "1"
zip = "4.5"
tempdir = "0.3"
ureq = { version = "3.1", features = ["json"] }
regex = "1"
scraper = { version = "0.24", default-features = false, features = ["errors"] }
git2 = { version = "0.20", default-features = false }
tiny-skia = "0.11"
usvg = "0.45"
crowbook-text-processing = "1"
html-escape = "0.2"
resvg = "0.45"
tungstenite = "0.27"
file-serve = "0.3"
comrak = { version = "0.41.1", default-features = false }
inquire = { version = "0.9", features = ["chrono", "date"] }
