[package]
name = "arneos"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
bat = { version = "0.24", default-features = false }
chrono = { version = "0.4.39", default-features = false, features = [
    "std",
    "clock",
    "serde",
] }
comrak = { version = "0.33.0", default-features = false, features = [
    "emojis",
    "syntect",
] }
crowbook-text-processing = "1"
gray_matter = { version = "0.2", default-features = false, features = ["yaml"] }
html-escape = "0.2"
regex = "1"
resvg = "0.44"
serde = { version = "1", features = ["derive"] }
syntect = "5.2.0"
tempdir = "0.3"
tiny-skia = "0.11"
url = { version = "2.5", features = ["serde"] }
usvg = "0.44"
ureq = "2.12"
zip = "2.2"
