[package]
name = "cli"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
arneos = { path = "../arneos" }
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "clock",
    "serde",
] }
clap = { version = "4", features = ["derive"] }
file-serve = { version = "0.3" }
html-escape = "0.2"
notify-debouncer-mini = "0.6"
quick-xml = { version = "0.37", features = ["serialize"] }
regex = "1"
resvg = "0.44"
scraper = { version = "0.22", default-features = false, features = [
    "errors",
] }
serde = { version = "1", features = ["derive"] }
tiny-skia = "0.11"
tungstenite = "0.24"
ureq = { version = "2.12", features = ["json"] }
usvg = "0.44"
url = { version = "2.5", features = ["serde"] }
git2 = { version = "0.20.0", default-features = false }
