[package]
name = "ssg"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
arneos = { path = "../arneos" }
blake3 = "1.5.5"
chrono = { version = "0.4.39", default-features = false, features = [
    "std",
    "clock",
    "serde",
] }
clap = { version = "4", features = ["derive"] }
grass = { version = "0.13", default-features = false }
maud = { version = "0.27" }
quick-xml = { version = "0.37", features = ["serialize"] }
rss = "2"
serde = { version = "1", features = ["derive"] }
url = { version = "2.5", features = ["serde"] }
serde_json = "1"
