[package]
name = "ssg"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
arneos = { path = "../arneos" }
pichu = { path = "../pichu" }
chrono = { version = "0.4.41", default-features = false, features = [
    "std",
    "clock",
    "serde",
] }
clap = { version = "4", features = ["derive"] }
maud = { version = "0.27" }
quick-xml = { version = "0.37", features = ["serialize"] }
rss = "2"
serde = { version = "1", features = ["derive"] }
url = { version = "2.5", features = ["serde"] }
serde_json = "1"
rayon = "1.10.0"
